--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="icon" href="img/favicon.png" type="image/x-icon">
     <title>Travel Agency</title>
 </head>
 <body>
