Added more responsiveness

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 </ul>
             </div>
         </form>
+        <div></div>
     </section>
     <section id="offers">
         <div class="container">
@@ -142,6 +143,7 @@
     <section id="bottom">
             <iframe src="https://www.google.com/maps/d/embed?mid=1DxBp76gZRdrORkiF_vFLZ1lKf-Q&hl=en" width="400" height="300"></iframe>
             <div id="links">
+                <!-- Make responsive -->
                 <img src="img/plane.png" alt="a paper plane">
                 <h4>Travel Agency</h4>
                 <h6>Quick links</h6>
@@ -155,6 +157,5 @@
                 </ul>
             </div>
     </section>
-    <footer></footer>
 </body>
 </html>
